@@ -925,7 +925,6 @@ int libgps_json_unpack(const char *buf,
         }
         return FILTER(status);
     }
-#ifdef RTCM104V2_ENABLE
     if (str_starts_with(classtag, "\"class\":\"RTCM2\"")) {
         status = json_rtcm2_read(buf,
                                  gpsdata->dev.path, sizeof(gpsdata->dev.path),
@@ -936,7 +935,6 @@ int libgps_json_unpack(const char *buf,
         }
         return FILTER(status);
     }
-#endif  // RTCM104V2_ENABLE
 #ifdef RTCM104V3_ENABLE
     if (str_starts_with(classtag, "\"class\":\"RTCM3\"")) {
         status = json_rtcm3_read(buf,
